# flood_defence_condition

./: .gitattributes  .gitignore  main.py  pyproject.toml
.quarto/vdoc/: .vdoc.2d91bcd1-d6b5-48fb-8221-46cda4582ef2.r
data/aims/: .gitignore  AIMS_Spatial_Flood_Defences_inc_standardised_attributes.geojson.dvc  aims.gpkg.dvc
data/bgs_geology/: .gitignore  625k_V5_Geology_UK_EPSG27700.gpkg.dvc
data/bgs_geosure/: .gitignore  GB_Hex_5km_GS_CollapsibleDeposits_v8.CPG.dvc  GB_Hex_5km_GS_CollapsibleDeposits_v8.dbf.dvc  GB_Hex_5km_GS_CollapsibleDeposits_v8.lyr.dvc  GB_Hex_5km_GS_CollapsibleDeposits_v8.prj.dvc  GB_Hex_5km_GS_CollapsibleDeposits_v8.sbn.dvc  GB_Hex_5km_GS_CollapsibleDeposits_v8.sbx.dvc  GB_Hex_5km_GS_CollapsibleDeposits_v8.shp.dvc  GB_Hex_5km_GS_CollapsibleDeposits_v8.shp.xml.dvc  GB_Hex_5km_GS_CollapsibleDeposits_v8.shx.dvc  GB_Hex_5km_GS_CollapsibleDeposits_v8_Colour_LookUp_Table.txt.dvc  GB_Hex_5km_GS_CompressibleGround_v8.CPG.dvc  GB_Hex_5km_GS_CompressibleGround_v8.dbf.dvc  GB_Hex_5km_GS_CompressibleGround_v8.lyr.dvc  GB_Hex_5km_GS_CompressibleGround_v8.prj.dvc  GB_Hex_5km_GS_CompressibleGround_v8.sbn.dvc  GB_Hex_5km_GS_CompressibleGround_v8.sbx.dvc  GB_Hex_5km_GS_CompressibleGround_v8.shp.dvc  GB_Hex_5km_GS_CompressibleGround_v8.shp.xml.dvc  GB_Hex_5km_GS_CompressibleGround_v8.shx.dvc  GB_Hex_5km_GS_CompressibleGround_v8_Colour_LookUp_Table.txt.dvc  GB_Hex_5km_GS_Landslides_v8.CPG.dvc  GB_Hex_5km_GS_Landslides_v8.dbf.dvc  GB_Hex_5km_GS_Landslides_v8.lyr.dvc  GB_Hex_5km_GS_Landslides_v8.prj.dvc  GB_Hex_5km_GS_Landslides_v8.sbn.dvc  GB_Hex_5km_GS_Landslides_v8.sbx.dvc  GB_Hex_5km_GS_Landslides_v8.shp.dvc  GB_Hex_5km_GS_Landslides_v8.shp.xml.dvc  GB_Hex_5km_GS_Landslides_v8.shx.dvc  GB_Hex_5km_GS_Landslides_v8_Colour_LookUp_Table.txt.dvc  GB_Hex_5km_GS_RunningSand_v8.CPG.dvc  GB_Hex_5km_GS_RunningSand_v8.dbf.dvc  GB_Hex_5km_GS_RunningSand_v8.lyr.dvc  GB_Hex_5km_GS_RunningSand_v8.prj.dvc  GB_Hex_5km_GS_RunningSand_v8.sbn.dvc  GB_Hex_5km_GS_RunningSand_v8.sbx.dvc  GB_Hex_5km_GS_RunningSand_v8.shp.dvc  (+23 more)
docs/: geology_columns_dict.md
experiments/: baseline.py
notebooks/: 01_data_audit.ipynb  03_joined.ipynb  04_eda.ipynb  05_eda__validity_audit.ipynb  06_eda__analyse.ipynb  07_eda__analyse.qmd  08_heuristic_baseline.ipynb  10_longitudinal_transitions.qmd  11_baseline_experiment_results.ipynb  12_baseline_experiment_shap.ipynb  13_heuristics_revisted.ipynb  14_flood_outline_exposure.ipynb  aims_camels_compatibility.ipynb
scripts/: create_coords.py  scratch.py  test.py
src/: cross_validate.py  exposure_aggregate.py  exposure_extract.py  features.py  metrics.py
(+54 files in other folders)
