[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "flood-defence-condition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["project-paths>=1.1.1"]

[dependency-groups]
dev = [
    "nbdime>=4.0.4",
]


[tool.project-paths]
data = "./data"
aims_data = "./data/aims"
geology_data = "./data/bgs_geology"
hydrogeology_data = "./data/bgs_hydrogeology"
camels_data = "./data/camels"
ea_data = "./data/ea"
processed_data = "./data/processed"
