[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "flood-defence-condition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fiona>=1.10.1",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "pandas>=3.0.3",
    "polars>=1.40.1",
    "project-paths>=1.1.1",
    "pyarrow>=24.0.0",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = ["nbdime>=4.0.4"]


[tool.project-paths]
data = "./data"
aims_data = "./data/aims"
geology_data = "./data/bgs_geology"
geosure_data = "./data/bgs_geosure"
hydrogeology_data = "./data/bgs_hydrogeology"
camels_data = "./data/camels"
ea_data = "./data/ea"
processed_data = "./data/processed"
