[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "flood-defence-condition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fiona>=1.10.1",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "nbstripout>=0.9.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "polars>=1.40.1",
    "project-paths>=1.1.1",
    "pyarrow>=24.0.0",
    "pyclustertend>=1.4.9",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "umap-learn>=0.5.12",
]

[dependency-groups]
dev = [
    "nbdime>=4.0.4",
    "python-dotenv>=1.2.2",
]


[tool.project-paths]
data = "./data"
aims_data = "./data/aims"
geology_data = "./data/bgs_geology"
geosure_data = "./data/bgs_geosure"
hydrogeology_data = "./data/bgs_hydrogeology"
camels_data = "./data/camels"
ea_data = "./data/ea"
processed_data = "./data/processed"
figures = "outputs/figures"
